Spacing with users checked in fixed

--- a/src/components/RequestForm.css
+++ b/src/components/RequestForm.css
@@ -81,7 +81,7 @@ html, body {
   justify-content: center;
   margin: 10px 0;
   overflow-y: auto;
-  max-height: 200px;
+  max-height: 300px;
   flex-grow: 1;
 }
 
@@ -238,5 +238,5 @@ html, body {
   margin-top: auto;
   width: 100%;
   max-width: 300px;
-  margin-bottom: 25px;
+  margin-bottom: 15px; 
 }
